k8s_apps_transition_demo/app1/local/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appOne
  namespace: appOne
  labels:
    name: appOne
    env: local
spec:
  minReadySeconds: 10
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: appOne
  template:
    metadata:
      labels:
        name: appOne
    spec:
      containers:
      - env:
        - name: PORT
          value: "80"
        image: ealen/echo-server:0.5.1
        imagePullPolicy: IfNotPresent
        name: appOne
        ports:
        - containerPort: 80
          name: api
