k8s_apps_transition_demo/app1/local/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: appOne
    env: local
  name: appOne
  namespace: appOne
spec:
  ports:
  - name: appOne-api
    port: 80
    targetPort: 80
  selector:
    name: appOne
